# template-microservice

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dotenv.template  pyproject.toml
service/: main.py  processor.py
template_service/: main.py  processor.py
