[project]
name = "template-service"
version = "0.1.0"
description = "Template microservice."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amplify-stateless @ git+https://github.com/WHOIGit/amplify-stateless-microservice.git@v1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages =["template_service"]

[tool.hatch.metadata]
allow-direct-references = true
